normalize search css

--- a/search/index.html
+++ b/search/index.html
@@ -5,17 +5,9 @@
 <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 <link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/search/index.html" rel="canonical">
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
 <!-- end bbinclude -->
 	<title>Search the Holocaust Historiography Project</title>
-	<style>		/* Search button fix */
-		/* wrap the search function in a div with this class */
-		.reset-box-sizing, .reset-box-sizing * {
-			-webkit-box-sizing: content-box;
-			-moz-box-sizing: content-box;
-			box-sizing: content-box;
-		}
-</style>
+<link rel="stylesheet" href="/_assets/css/search.css" media="screen">
 </head>
 <body id="top">
 <!-- #bbinclude "page-header-small.incl" -->
