--- a/a/index.html
+++ b/a/index.html
@@ -19,9 +19,9 @@
 			</h2>
 			<div id="toc">
 				<ul class="columns">
-					<li><a href="/a/absurd-claims/index.html">Absurd Claims</a></li>
+					<li><a href="/a/absurd-claims/index.html">absurd claims</a></li>
 					<li><a href="/a/adametz-gerhard/index.html">Adametz, Gerhard</a></li>
-					<li><a href="/a/air-photos/index.html">Air Photos</a></li>
+					<li><a href="/a/air-photos/index.html">air photos</a></li>
 					<li><a href="/a/aktion-1005/index.html">Aktion 1005</a></li>
 					<li><a href="/a/aktion-reinhardt/index.html">Aktion Reinhardt</a></li>
 					<li><a href="/a/aktion-reinhardt-camps/index.html">Aktion Reinhardt Camps</a></li>
@@ -33,7 +33,7 @@
 					<li><a href="/a/auschwitz/index.html">Auschwitz</a></li>
 					<li><a href="/a/auschwitz-album/index.html">Auschwitz Album</a></li>
 					<li><a href="/b/birkenau/index.html">Auschwitz-Birkenau</a></li>
-					<li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, Bombing of</a></li>
+					<li><a href="/a/auschwitz-bombing-of/index.html">Auschwitz, bombing of</a></li>
 					<li><a href="/a/auschwitz-death-books/index.html">Auschwitz Death Books</a></li>
 					<li><a href="/a/auschwitz-main-camp/index.html">Auschwitz Main Camp</a></li>
 					<li><a href="/a/auschwitz-museum/index.html">Auschwitz Museum</a></li>
