start fixing title caps

--- a/b/index.html
+++ b/b/index.html
@@ -67,7 +67,7 @@
 						<li><a href="/b/boger-wilhelm/index.html">Boger, Wilhelm</a></li>
 						<li><a href="/c/czechia/index.html">Bohemia</a></li>
 						<li><a href="/b/bomba-abraham/index.html">Bomba, Abraham</a></li>
-						<li><a href="/b/bone-mill/index.html">Bone Mill</a></li>
+						<li><a href="/b/bone-mill/index.html">bone mill</a></li>
 						<li><a href="/b/bouard-michel-de/index.html">Bo&uuml;ard, Michel de</a></li>
 						<li><a href="/b/brener-hejnoch/index.html">Brener, Hejnoch</a></li>
 						<li><a href="/b/brest/index.html">Brest</a></li>
@@ -81,8 +81,7 @@
 						<li><a href="/b/buki-milton/index.html">Buki, Milton</a></li>
 						<li><a href="/b/bulgaria/index.html">Bulgaria</a></li>
 						<li><a href="/b/buna/index.html">BUNA</a></li>
-						<li><a href="/b/bunkers/index.html">Bunkers</a></li>
-						<li><a href="/b/bunkers/index.html">Bunkers</a></li>
+						<li><a href="/b/bunkers/index.html">bunkers</a></li>
 						<li><a href="/b/burmeister-walter/index.html">Burmeister, Walter</a></li>
 					</ul>
 			</div>
