--- a/c/index.html
+++ b/c/index.html
@@ -19,8 +19,8 @@
 			</h2>
 				<div id="toc">
 					<ul class="columns">
-						<li><a href="/c/camps/index.html">Camps</a></li>
-						<li><a href="/c/carbon-monoxide/index.html">Carbon Monoxide</a></li>
+						<li><a href="/c/camps/index.html">camps</a></li>
+						<li><a href="/c/carbon-monoxide/index.html">carbon monoxide</a></li>
 						<li><a href="/c/censorship/index.html">Censorship</a></li>
 						<li><a href="/c/censorship/index.html">Censorship</a></li>
 						<li><a href="/c/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
@@ -30,19 +30,18 @@
 						<li><a href="/c/christophersen-thies/index.html">Christophersen, Thies</a></li>
 						<li><a href="/c/chybinski-stanislaw/index.html">Chybi&#324;ski, Stanis&#322;aw</a></li>
 						<li><a href="/c/cliches-about-the-holocaust/index.html">Clich&eacute;s about the Holocaust</a></li>
-						<li><a href="/c/code-language/index.html">Code Language</a></li>
+						<li><a href="/c/code-language/index.html">code language</a></li>
 						<li><a href="/c/cohen-leon/index.html">Cohen, Leon</a></li>
 						<li><a href="/c/commissars-order/index.html">Commissars Order</a></li>
-						<li><a href="/c/compensation/index.html">Compensation</a></li>
-						<li><a href="/c/compensation/index.html">Compensation</a></li>
-						<li><a href="/c/concentration-camps/index.html">Concentration Camps</a></li>
+						<li><a href="/c/compensation/index.html">compensation</a></li>
+						<li><a href="/c/concentration-camps/index.html">concentration camps</a></li>
 						<li><a href="/c/construction-office/index.html">Construction Office</a></li>
-						<li><a href="/c/convergence-of-evidence/index.html">Convergence of Evidence</a></li>
-						<li><a href="/c/corpse-photos/index.html">Corpse Photos</a></li>
+						<li><a href="/c/convergence-of-evidence/index.html">convergence of evidence</a></li>
+						<li><a href="/c/corpse-photos/index.html">corpse photos</a></li>
 						<li><a href="/c/corry-joe/index.html">Corry, Joe</a></li>
-						<li><a href="/c/cremation-propaganda/index.html">Cremation Propaganda</a></li>
-						<li><a href="/c/crematoria/index.html">Crematoria</a></li>
-						<li><a href="/c/criminal-traces/index.html">Criminal Traces</a></li>
+						<li><a href="/c/cremation-propaganda/index.html">cremation propaganda</a></li>
+						<li><a href="/c/crematoria/index.html">crematoria</a></li>
+						<li><a href="/c/criminal-traces/index.html">criminal traces</a></li>
 						<li><a href="/y/yugoslavia/index.html">Croatia</a></li>
 						<li><a href="/c/crystal-night/index.html">Crystal Night</a></li>
 						<li><a href="/z/zyklon-b/index.html">cyanide gas</a></li>
