--- a/w/index.html
+++ b/w/index.html
@@ -50,9 +50,9 @@
 					<li><a href="/w/wirths-eduard/index.html">Wirths, Eduard</a></li>
 					<li><a href="/w/wirtschafts-und-verwaltungs-hauptamt/index.html">Wirtschafts- und Verwaltungshauptamt</a></li>
 					<li><a href="/w/wisliceny-dieter/index.html">Wisliceny, Dieter</a></li>
-					<li><a href="/w/witch-trials/index.html">Witch Trials</a></li>
-					<li><a href="/w/witnesses/index.html">Witnesses</a></li>
-					<li><a href="/w/witnesses-against-mass-murder/index.html">Witnesses against Mass Murder</a></li>
+					<li><a href="/w/witch-trials/index.html">witch trials</a></li>
+					<li><a href="/w/witnesses/index.html">witnesses</a></li>
+					<li><a href="/w/witnesses-against-mass-murder/index.html">witnesses against mass murder</a></li>
 					<li><a href="/w/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
 					<li><a href="/w/wolff-karl/index.html">Wolff, Karl</a></li>
 					<li><a href="/w/wolken-otto/index.html">Wolken, Otto</a></li>
