--- a/w/index.html
+++ b/w/index.html
@@ -28,7 +28,7 @@
 					<li><a href="/w/warszawski-szyja/index.html">Warszawski, Szyja</a></li>
 					<li><a href="/w/watt-donald/index.html">Watt, Donald</a></li>
 					<li><a href="/t/tools-of-mass-murder/index.html">weapons of mass murder</a></li>
-					<li><a href="/w/wedding-rings/index.html">Wedding Rings</a></li>
+					<li><a href="/w/wedding-rings/index.html">wedding rings</a></li>
 					<li><a href="/w/weise-gottfried/index.html">Weise, Gottfried</a></li>
 					<li><a href="/w/weiss-janda/index.html">Weiss, Janda</a></li>
 					<li><a href="/w/weissmandel-dov/index.html">Weissmandel, Dov</a></li>
