--- a/support-revisionism.html
+++ b/support-revisionism.html
@@ -2,8 +2,12 @@
 <html lang="en-US">
 <head>
 <!-- #bbinclude "metatags.incl" -->
-<meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen"><link href="https://encyclopedia.historiography-project.com/support-revisionism.html" rel="canonical">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<link rel="stylesheet" href="/_assets/css/encyclopedia.css" media="screen">
+	<link href="https://encyclopedia.historiography-project.com/support-revisionism.html" rel="canonical">
 <!-- end bbinclude -->
 	<title>Holocaust Historiography Project &mdash; Support revisionism</title>
 </head>
@@ -45,21 +49,13 @@
 		<div class="col-md-3">
 			<nav class="navigation">
 				<h4>
-					Sections
+					Go to &hellip;
 				</h4>
-				<a id="archives" href="https://www.historiography-project.com/archives/index.php" title="Holocaust archive">Archives</a> <a id="books" href="https://www.historiography-project.com/books/index.php" style="color: rgb(64, 64, 64); font-weight: bold" title="Holocaust books">Books</a> <a id="mt" href="https://www.historiography-project.org/" title="Clippings and commentary">Clippings</a> <a id="contest" href="https://www.historiography-project.com/contest/index.php" title="Annual Halloween contest">Contest</a> <a id="miscellaneous" href="https://www.historiography-project.com/misc/index.php" title="Holocaust-related writings">Miscellaneous</a> <a id="satire" href="https://www.historiography-project.com/satire/index.php" title="Holocaust satire">Satire</a> <a id="videos" href="https://www.historiography-project.com/video/index.php" title="Videos">Videos</a>
+				<a href="https://www.historiography-project.com">Main site</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a>
 				<h4>
-					Site Info
+					Archives
 				</h4>
-				<a id="new" href="https://hhpnews.blogspot.com/" title="New files and site changes">What&rsquo;s New</a> <a id="rss" href="https://www.historiography-project.org/feed/">RSS feed</a> <a id="colophon" href="https://www.historiography-project.com/top/colophon.php" title="About this site">Colophon</a> <a id="copyright" href="https://www.historiography-project.com/top/copyright.php" title="Copyright information">Copyright</a>
-				<h4>
-					Navigation
-				</h4>
-				<a id="search" href="/search/index.html" title="Search the HHP site">Search</a> <a id="links" href="https://www.historiography-project.com/top/links.php" title="Holocaust-related websites">Links</a> <a id="home" href="https://www.historiography-project.com/index.php" title="Back to the main HHP page">Home</a>
-			<h4>
-				Go to &hellip;
-			</h4>
-			<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://www.historiography-project.org">Clippings</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://encyclopedia.historiography-project.com">Holocaust Encyclopedia</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a> <a href="https://www.historiography-project.com">Main site</a>
+				<a href="https://art-butz.historiography-project.com">Art Butz</a> <a href="https://joel-hayward.historiography-project.com">Joel Hayward</a> <a href="https://don-heddesheimer.historiography-project.com">Don Heddesheimer</a> <a href="https://irving-v-lipstadt.historiography-project.com">Irving vs. Lipstadt</a>
 			</nav>
 		</div>
 	</div>
